--- a/train/pyproject.toml
+++ b/train/pyproject.toml
@@ -25,15 +25,15 @@ dependencies = [
     "numpy",
     "torch",
     "torchvision",
-    "tqdm==4.64.0",
-    "opencv-python==4.6.0.66",
-    "h5py==3.6.0",
-    "wandb==0.12.18",
+    "tqdm>=4.64.0",
+    "opencv-python>=4.6.0",
+    "h5py>=3.6.0",
+    "wandb>=0.12.18",
     "matplotlib",
     "prettytable",
     "efficientnet-pytorch",
     "warmup-scheduler",
-    "diffusers==0.11.1",
+    "diffusers>=0.11.1",
     "lmdb",
     "vit-pytorch",
     "positional-encodings",
