--- a/deployment/config/robot.yaml
+++ b/deployment/config/robot.yaml
@@ -7,7 +7,7 @@ graph_rate: 0.3333 # Hz
 
 # topic names (modify for different robots/nodes)
 vel_teleop_topic: /cmd_vel_mux/input/teleop 
-vel_navi_topic: /cmd_vel_mux/input/navi
+vel_navi_topic: /cmd_vel
 vel_recovery_topic: /cmd_vel_mux/input/recovery
 
 
