--- a/deployment/deployment_environment.yaml
+++ b/deployment/deployment_environment.yaml
@@ -1,21 +1,15 @@
 name: vint_deployment
 channels:
-  - pytorch
   - conda-forge
   - defaults
 dependencies:
   - python=3.10
-  - cudatoolkit=11.
-  - torchvision
-  - numpy
+  - numpy=1.26.4
   - matplotlib
   - pyyaml
   - rospkg
   - pip
   - pip:
-      - torch
-      - torchvision
-      - torchaudio
       - einops
       - vit-pytorch
       - efficientnet_pytorch
