--- a/train/pyproject.toml
+++ b/train/pyproject.toml
@@ -22,11 +22,11 @@ classifiers = [
 ]
 
 dependencies = [
-    "numpy",
-    "torch",
-    "torchvision",
+    "numpy=1.26.4",
+    "torch=0.18.0",
+    "torchvision=0.18.0",
     "tqdm>=4.64.0",
-    "opencv-python>=4.6.0",
+    "opencv-python=4.7.0.72",
     "h5py>=3.6.0",
     "wandb>=0.12.18",
     "matplotlib",
