--- a/train/pyproject.toml
+++ b/train/pyproject.toml
@@ -22,11 +22,9 @@ classifiers = [
 ]
 
 dependencies = [
-    "numpy==1.26.4",
-    "torch==2.3.0",
-    "torchvision==0.18.0",
+    "numpy<2",
     "tqdm>=4.64.0",
-    "opencv-python==4.7.0.72",
+    "opencv-python",
     "h5py>=3.6.0",
     "wandb>=0.12.18",
     "matplotlib",
